add option no phidget

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,2 @@
 include LICENSE
-recursive-include alarms *.*
-recursive-include settings  *.*
-
+recursive-include SR700-Artisan-PDServer-Phidget *.*
